player reconnect and multiple sessions

--- a/internal/web/templates/game.templ
+++ b/internal/web/templates/game.templ
@@ -1,7 +1,7 @@
 package templates
 
 templ Game(gameId string) {
-	<script src="/public/game.js" defer></script>
+	<script src="/public/res/game.js" defer></script>
 	@Layout() {
 		<div>game { gameId }</div>
 	}
