--- a/internal/web/templates/layout.templ
+++ b/internal/web/templates/layout.templ
@@ -7,6 +7,7 @@ templ Layout() {
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+			<link rel="icon" href="/public/res/favicon.ico"/>
 			<title>Cribbage</title>
 		</head>
 		<body>
