--- a/internal/web/templates/layout.templ
+++ b/internal/web/templates/layout.templ
@@ -8,6 +8,7 @@ templ Layout() {
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
 			<link rel="icon" href="/public/res/favicon.ico"/>
+			<script src="https://unpkg.com/htmx.org@2.0.4"></script>
 			<title>Cribbage</title>
 		</head>
 		<body>
